# uwsensor_demos

./: .gitignore  README.md
simple_grab/: grip_when_broken.py  mainpage.dox  manifest.xml  move_gripper.py  move_gripper_publisher.py  move_to_pose.py
simple_grab/launch/: move_right_arm.launch  right_arm_navigation.launch
simple_grab_hs/: mainpage.dox  manifest.xml  simple_grab_hs.cabal
simple_grab_hs/launch/: both_arms_navigation.launch  left_arm_navigation.launch  move_left_arm.launch  move_right_arm.launch  right_arm_navigation.launch
simple_grab_hs/src/: AngleGripper.hs  GripWhenBroken.hs  GripperTalker.hs  Main.hs  MoveToPose.hs  SensorPublisher.hs  SensorSubscriber.hs  Simple_grab_hs.hs
